--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,9 @@
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
 /vendor
-.env
-.env.backup
-.env.production
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
+composer.phar
+composer.lock
+.DS_Store
+Thumbs.db
+/phpunit.xml
 /.idea
 /.vscode
+.phpunit.result.cache
